--- a/CheckTutle/.classpath
+++ b/CheckTutle/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="src" path="/BLibrary"/>
-	<classpathentry kind="lib" path="lib/obpro.jar"/>
+	<classpathentry kind="lib" path="C:/forkCRiPS/RonproEditor/package/lib/blib.jar"/>
+	<classpathentry kind="lib" path="C:/forkCRiPS/RonproEditor/package/lib/obpro.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
